add extend rule for navbar and global padding

--- a/css/less/style.less
+++ b/css/less/style.less
@@ -1,8 +1,7 @@
 @import 'bootstrap/bootstrap';
 @import 'overrides';
 
+@import 'globals';
+
 @import 'navbar';
 
-body {
-  padding-bottom: 100px;
-}
